crates/otter-vm/tests/compile_fail/branded_root_native_closure_rejected.stderr
error[E0277]: `*const handle::GlobalHandleTable` cannot be sent between threads safely
  --> tests/compile_fail/branded_root_native_closure_rejected.rs:15:31
   |
15 |           store_native_callback(move || {
   |           --------------------- ^------
   |           |                     |
   |  _________|_____________________within this `{closure@$DIR/tests/compile_fail/branded_root_native_closure_rejected.rs:15:31: 15:38}`
   | |         |
   | |         required by a bound introduced by this call
16 | |             std::hint::black_box(root);
17 | |         });
   | |_________^ `*const handle::GlobalHandleTable` cannot be sent between threads safely
   |
   = help: within `{closure@$DIR/tests/compile_fail/branded_root_native_closure_rejected.rs:15:31: 15:38}`, the trait `Send` is not implemented for `*const handle::GlobalHandleTable`
note: required because it appears within the type `handle::GlobalHandle<OpaqueLeaf>`
  --> $WORKSPACE/crates/otter-gc/src/handle.rs
   |
   | pub(crate) struct GlobalHandle<T: ?Sized> {
   |                   ^^^^^^^^^^^^
note: required because it appears within the type `Root<'_, OpaqueLeaf>`
  --> $WORKSPACE/crates/otter-gc/src/branded.rs
   |
   | pub struct Root<'iso, T: ?Sized> {
   |            ^^^^
note: required because it's used within this closure
  --> tests/compile_fail/branded_root_native_closure_rejected.rs:15:31
   |
15 |         store_native_callback(move || {
   |                               ^^^^^^^
note: required by a bound in `store_native_callback`
  --> tests/compile_fail/branded_root_native_closure_rejected.rs:4:40
   |
 4 | fn store_native_callback<F: FnOnce() + Send + 'static>(_callback: F) {}
   |                                        ^^^^ required by this bound in `store_native_callback`

error[E0277]: `*const OpaqueLeaf` cannot be sent between threads safely
  --> tests/compile_fail/branded_root_native_closure_rejected.rs:15:31
   |
15 |           store_native_callback(move || {
   |           --------------------- ^------
   |           |                     |
   |  _________|_____________________within this `{closure@$DIR/tests/compile_fail/branded_root_native_closure_rejected.rs:15:31: 15:38}`
   | |         |
   | |         required by a bound introduced by this call
16 | |             std::hint::black_box(root);
17 | |         });
   | |_________^ `*const OpaqueLeaf` cannot be sent between threads safely
   |
   = help: within `{closure@$DIR/tests/compile_fail/branded_root_native_closure_rejected.rs:15:31: 15:38}`, the trait `Send` is not implemented for `*const OpaqueLeaf`
note: required because it appears within the type `PhantomData<*const OpaqueLeaf>`
  --> $RUST/core/src/marker.rs
   |
   | pub struct PhantomData<T: PointeeSized>;
   |            ^^^^^^^^^^^
note: required because it appears within the type `handle::GlobalHandle<OpaqueLeaf>`
  --> $WORKSPACE/crates/otter-gc/src/handle.rs
   |
   | pub(crate) struct GlobalHandle<T: ?Sized> {
   |                   ^^^^^^^^^^^^
note: required because it appears within the type `Root<'_, OpaqueLeaf>`
  --> $WORKSPACE/crates/otter-gc/src/branded.rs
   |
   | pub struct Root<'iso, T: ?Sized> {
   |            ^^^^
note: required because it's used within this closure
  --> tests/compile_fail/branded_root_native_closure_rejected.rs:15:31
   |
15 |         store_native_callback(move || {
   |                               ^^^^^^^
note: required by a bound in `store_native_callback`
  --> tests/compile_fail/branded_root_native_closure_rejected.rs:4:40
   |
 4 | fn store_native_callback<F: FnOnce() + Send + 'static>(_callback: F) {}
   |                                        ^^^^ required by this bound in `store_native_callback`
